--- a/example/app.json
+++ b/example/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "KeyboardEventsExample",
-  "displayName": "KeyboardEvents Example"
+  "name": "KeyboardControllerExample",
+  "displayName": "KeyboardController Example"
 }
