--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -3,12 +3,12 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'KeyboardEventsExample' do
+target 'KeyboardControllerExample' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
 
-  pod 'react-native-keyboard-events', :path => '../..'
+  pod 'react-native-keyboard-controller', :path => '../..'
 
   # Enables Flipper.
   #
