--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.68.1"
+    "react-native": "0.68.1",
+    "react-native-reanimated": "2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
