--- a/package.json
+++ b/package.json
@@ -64,12 +64,14 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-builder-bob": "^0.18.0",
+    "react-native-reanimated": "2.8.0",
     "release-it": "^14.2.2",
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-reanimated": "^2.3.0"
   },
   "jest": {
     "preset": "react-native",
