--- a/example/package.json
+++ b/example/package.json
@@ -9,13 +9,22 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
-    "react-native-reanimated": "2.8.0"
+    "react-native-reanimated": "2.8.0",
+    "react-native-gesture-handler": "^2.4.1",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@types/react": "^18.0.6",
+    "@types/react-native": "^0.67.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "metro-react-native-babel-preset": "^0.67.0"
   }
