--- a/example/package.json
+++ b/example/package.json
@@ -13,12 +13,15 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "add": "^2.0.6",
     "react": "17.0.2",
     "react-native": "0.68.1",
-    "react-native-reanimated": "2.8.0",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-reanimated": "2.8.0",
     "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-toast-message": "^2.1.5",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
