--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-keyboard-controller",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.0",
   "description": "Platform agnostic keyboard manager",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
