--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-builder-bob": "^0.18.0",
+    "react-native-gesture-handler": "2.4.1",
     "react-native-reanimated": "2.8.0",
     "release-it": "^14.2.2",
     "typescript": "^4.6.3"
@@ -73,6 +74,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
+    "react-native-gesture-handler": "*",
     "react-native-reanimated": "^2.3.0"
   },
   "jest": {
