--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: docs
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
