--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./docs
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
@@ -19,16 +22,13 @@ jobs:
           node-version: 16.x
           cache: yarn
       - name: Install dependencies
-        working-directory: ./docs
         run: yarn install --frozen-lockfile
       - name: Build website
-        working-directory: ./docs
         run: yarn build
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
       - name: Deploy to GitHub Pages
-        working-directory: ./docs
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
