[RNKC-044] - eslint integration

--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
           "trailingComma": "es5",
           "useTabs": false
         }
-      ]
+      ],
+      "react-hooks/exhaustive-deps": "warn"
     }
   },
   "eslintIgnore": [
