--- a/.github/workflows/verify-js.yml
+++ b/.github/workflows/verify-js.yml
@@ -27,3 +27,16 @@ jobs:
           yarn install --frozen-lockfile
       - name: Run TypeScript
         run: yarn typescript
+  lint:
+    name: Lint TS
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: yarn
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Run Lint
+        run: yarn lint
