--- a/.github/workflows/verify-swift.yml
+++ b/.github/workflows/verify-swift.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - feature/swift-format
   pull_request:
     branches:
       - main
@@ -23,6 +22,7 @@ jobs:
           WORKING_DIRECTORY: ios
   format:
     runs-on: macOS-latest
+    name: Swift Format
     defaults:
       run:
         working-directory: ./ios
