--- a/.github/workflows/verify-swift.yml
+++ b/.github/workflows/verify-swift.yml
@@ -20,3 +20,20 @@ jobs:
           args: --strict
         env:
           WORKING_DIRECTORY: ios
+  format:
+    runs-on: macOS-latest
+    name: Swift Format
+    defaults:
+      run:
+        working-directory: ./ios
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install SwiftFormat
+        run: brew install swiftformat
+
+      - name: Format Swift code
+        run: swiftformat --verbose .
+
+      - name: Verify that the formatted code hasn't been changed
+        run: git diff --exit-code HEAD
