--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,5 @@
 KeyboardController_kotlinVersion=1.3.50
 KeyboardController_compileSdkVersion=29
 KeyboardController_targetSdkVersion=29
+
+android.useAndroidX=true
