[RNKC-051] - assemble ios

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -62,8 +62,8 @@ jobs:
         run: "set -o pipefail && xcodebuild \
           CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ \
           -derivedDataPath build -UseModernBuildSystem=YES \
-          -workspace VisionCameraExample.xcworkspace \
-          -scheme VisionCameraExample \
+          -workspace KeyboardControllerExample.xcworkspace \
+          -scheme KeyboardControllerExample \
           -sdk iphonesimulator \
           -configuration Debug \
           -destination 'platform=iOS Simulator,name=iPhone 11 Pro' \
