--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -55,7 +55,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pods-
       - name: Install Pods
-        run: bundle exec pod check || bundle exec pod install
+        run: pod install
       - name: Install xcpretty
         run: gem install xcpretty
       - name: Build App
