--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-keyboard-controller",
   "version": "1.0.0-beta.0",
-  "description": "Platform agnostic keyboard manager",
+  "description": "Keyboard manager which works in identical way on both iOS and Android",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -44,7 +44,7 @@
   "bugs": {
     "url": "https://github.com/kirillzyusko/react-native-keyboard-controller/issues"
   },
-  "homepage": "https://github.com/kirillzyusko/react-native-keyboard-controller#readme",
+  "homepage": "https://kirillzyusko.github.io/react-native-keyboard-controller/",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
