--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -10,8 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.7",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "react": "18.1.0",
-    "react-native": "0.70.0-rc.0"
+    "react-native": "0.70.0-rc.0",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-reanimated": "3.0.0-rc.0",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
+    "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
