--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-keyboard-controller": "../",
     "react-native-reanimated": "2.8.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
