--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -17,6 +17,7 @@
     "react": "18.1.0",
     "react-native": "0.70.0-rc.0",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-keyboard-controller": "../",
     "react-native-reanimated": "3.0.0-rc.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
