--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -16,6 +16,7 @@
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.0.0-rc.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
