[RNKC-051] - implement native module on iOS

--- a/package.json
+++ b/package.json
@@ -150,5 +150,14 @@
         }
       ]
     ]
+  },
+  "codegenConfig": {
+    "libraries": [
+      {
+        "name": "RNKeyboardControllerSpec",
+        "type": "modules",
+        "jsSrcsDir": "src"
+      }
+    ]
   }
 }
