--- a/package.json
+++ b/package.json
@@ -157,6 +157,11 @@
         "name": "RNKeyboardControllerSpec",
         "type": "modules",
         "jsSrcsDir": "src"
+      },
+      {
+        "name": "RNKeyboardControllerViewSpec",
+        "type": "components",
+        "jsSrcsDir": "src"
       }
     ]
   }
