--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "jest",
     "typescript": "tsc --noEmit --project tsconfig.build.json",
     "lint": "eslint --quiet \"**/*.{js,ts,tsx}\"",
+    "lint-clang": "find ios/ -iname *.h -o -iname *.m -o -iname *.mm | grep -v -e Pods -e build | xargs clang-format -i -n --Werror",
     "prepare": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
@@ -56,6 +57,7 @@
     "@types/react": "^17.0.39",
     "@types/react-native": "0.67.6",
     "commitlint": "^11.0.0",
+    "clang-format": "^1.8.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
