--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,7 @@
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-gesture-handler": "^2.5.0",
-    "react-native-keyboard-controller": "../",
+    "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
