[RNKC-044] - rename a job to more convenient variant

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -19,7 +19,7 @@ on:
       - 'example/yarn.lock'
 
 jobs:
-  build_example:
+  build:
     name: Build Android Example App
     runs-on: ubuntu-latest
     steps:
