--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "2.10.0",
+    "react-native-redash": "^18.0.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-toast-message": "^2.1.5"
