--- a/example/package.json
+++ b/example/package.json
@@ -21,7 +21,7 @@
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native-screens": "https://github.com/kirillzyusko/react-native-screens.git#refactor/removed-deprecated-replace-system-window-insets",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
