[RNKC-058] - don't run CI if specific files weren't changed

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -4,9 +4,21 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '.github/workflows/build-ios.yml'
+      - 'ios/**'
+      - 'example/ios/**'
+      - 'yarn.lock'
+      - 'example/yarn.lock'
   pull_request:
     branches:
       - main
+    paths:
+      - '.github/workflows/build-ios.yml'
+      - 'ios/**'
+      - 'example/ios/**'
+      - 'yarn.lock'
+      - 'example/yarn.lock'
 
 jobs:
   build:
