--- a/.github/workflows/build-android-fabric.yml
+++ b/.github/workflows/build-android-fabric.yml
@@ -71,4 +71,4 @@ jobs:
       - name: Run Gradle Build for android/
         run: cd android && ./gradlew assembleDebug --build-cache && cd ..
       - name: Run Gradle Build for FabricExample/android/
-        run: cd FabricExample/android && ./gradlew assembleDebug --build-cache -PreactNativeArchitectures=arm64-v8a && cd ../..
+        run: cd FabricExample/android && ./gradlew assembleDebug --build-cache && cd ../..
