--- a/.github/workflows/build-ios-fabric.yml
+++ b/.github/workflows/build-ios-fabric.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Restore buildcache
         uses: mikehardy/buildcache-action@v1
         continue-on-error: true
+        with:
+          cache_key: react-native-keyboard-controller-fabric
 
       - name: Setup Ruby (bundle)
         uses: ruby/setup-ruby@v1
