[RNKC-062] - move codegen definitions into separate folder (#70)
## Description

Move codegen declarations into separate `specs` folder.

## Motivation and Context

Since the project becomes bigger and bigger it's better to keep things
separated from each other and group them logically.

In this PR I'm moving `KeyboardControllerViewNativeComponent.ts`,
`NativeKeyboardController.ts` and `NativeStatusBarManagerCompat.ts` into
separate folder, since all of them are declarations for codegen.

## Changelog

### JS
- rename `monkey-patch` to `ts`;
- move specs files into `specs` directory;

## How Has This Been Tested?

Will be tested manually.

## Checklist

- [x] CI successfully passed

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -190,7 +190,7 @@ dependencies {
 if (isNewArchitectureEnabled()) {
   react {
     reactNativeDir = rootProject.file("../node_modules/react-native/")
-    jsRootDir = file("../src/")
+    jsRootDir = file("../src/specs/")
     codegenDir = rootProject.file("../node_modules/react-native-codegen/")
     libraryName = "reactnativekeyboardcontroller"
     codegenJavaPackageName = "com.reactnativekeyboardcontroller"
