[RNKC-064] - reduced npm package size

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "!lib/typescript/example",
     "!android/build",
     "!android/.gradle",
+    "!android/gradle",
+    "!android/gradlew",
+    "!android/gradlew.bat",
     "!ios/build",
     "!**/__tests__",
     "!**/__fixtures__",
