[RNKC-065] - CI emojis (#73)
## Description

Added emojis in CI titles of jobs.

## Motivation and Context

For easier distinguishing of jobs. Sometimes it may be hard to realize
which jobs were triggering.

With icons it will be much more easier to distinguish them.

## Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### CI
- added emojis for CI jobs titles;

## How Has This Been Tested?

Via GitHub actions.

## Checklist

- [x] CI successfully passed

--- a/.github/workflows/verify-cpp.yml
+++ b/.github/workflows/verify-cpp.yml
@@ -1,15 +1,15 @@
-name: Verify C++
+name: 🔮 Verify C++
 
 on:
   push:
     branches:
       - main
     paths:
-      - '.github/workflows/validate-cpp.yml'
+      - '.github/workflows/verify-cpp.yml'
       - 'android/src/main/**'
   pull_request:
     paths:
-      - '.github/workflows/validate-cpp.yml'
+      - '.github/workflows/verify-cpp.yml'
       - 'android/src/main/**'
 
 jobs:
