chore: further experiments

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -23,6 +23,9 @@ target 'KeyboardControllerExample' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'INTUAnimationEngine'
+  pod 'INTUAnimationEngine/SpringSolver'
+
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
