[RNKC-067] - android autolinking (#77)
## 📜 Description

Removed all C++ code that was responsible for autolinking.

## 💡 Motivation and Context

Since RN 0.70 supports autolinking we need to remove old code that we
used before for automatic autolinking.

## 📢 Changelog

### JS
- use new CLI declaration for codegen;

### iOS
- renamed imports;

### Android
- removed Android.mk code;
- removed related C++ code;

## 🤔 How Has This Been Tested?

Tested manually on iOS/Android devices.

## 📝 Checklist

- [x] CI successfully passed

--- a/package.json
+++ b/package.json
@@ -156,17 +156,11 @@
     ]
   },
   "codegenConfig": {
-    "libraries": [
-      {
-        "name": "RNKeyboardControllerSpec",
-        "type": "modules",
-        "jsSrcsDir": "src/specs"
-      },
-      {
-        "name": "RNKeyboardControllerViewSpec",
-        "type": "components",
-        "jsSrcsDir": "src/specs"
-      }
-    ]
+    "name": "reactnativekeyboardcontroller",
+    "type": "all",
+    "jsSrcsDir": "./src/specs",
+    "android": {
+      "javaPackageName": "com.reactnativekeyboardcontroller"
+    }
   }
 }
