--- a/package.json
+++ b/package.json
@@ -70,16 +70,16 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.6.2",
     "react": "18.1.0",
-    "react-native": "0.70.1",
+    "react-native": "0.70.2",
     "react-native-builder-bob": "^0.18.0",
     "react-native-reanimated": "2.10.0",
     "release-it": "^14.2.2",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-reanimated": "^2.3.0"
+    "react-native-reanimated": ">=2.3.0"
   },
   "jest": {
     "preset": "react-native",
