refactor: continue implementation

--- a/example/package.json
+++ b/example/package.json
@@ -41,6 +41,10 @@
     "setupFiles": ["./jestSetup.js"],
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
+    ],
+    "moduleDirectories": [
+      "<rootDir>/node_modules",
+      "node_modules"
     ]
   }
 }
