--- a/example/package.json
+++ b/example/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-native": "^11.5.0",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
