--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
   "react-native": "src/index",
-  "source": "./",
+  "source": "src/index",
   "files": [
     "src",
     "lib",
