--- a/.github/workflows/verify-js.yml
+++ b/.github/workflows/verify-js.yml
@@ -53,7 +53,7 @@ jobs:
           cd example
           yarn install --frozen-lockfile
       - name: Run lib tests
-        run: yarn test
+        run: yarn test src
       - name: Run example app tests (verify mocks)
         run: |
           cd example
