fix: added jest to globals (eslint)

--- a/package.json
+++ b/package.json
@@ -129,6 +129,9 @@
         }
       ],
       "react-hooks/exhaustive-deps": "warn"
+    },
+    "globals": {
+      "jest": "readonly"
     }
   },
   "eslintIgnore": [
