--- a/.github/workflows/verify-js.yml
+++ b/.github/workflows/verify-js.yml
@@ -48,6 +48,13 @@ jobs:
           node-version: 16.x
           cache: yarn
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Run tests
-        run: yarn test
+        run: |
+          yarn install --frozen-lockfile
+          cd example
+          yarn install --frozen-lockfile
+      - name: Run lib tests
+        run: yarn test src
+      - name: Run example app tests (verify mocks)
+        run: |
+          cd example
+          yarn test
