--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ios",
     "cpp",
     "react-native-keyboard-controller.podspec",
+    "jest",
     "!lib/typescript/example",
     "!android/build",
     "!android/.gradle",
@@ -128,6 +129,9 @@
         }
       ],
       "react-hooks/exhaustive-deps": "warn"
+    },
+    "globals": {
+      "jest": "readonly"
     }
   },
   "eslintIgnore": [
