--- a/.github/workflows/verify-ios.yml
+++ b/.github/workflows/verify-ios.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           WORKING_DIRECTORY: ios
   format:
-    runs-on: macOS-latest
+    runs-on: macOS-12
     name: Swift Format
     defaults:
       run:
@@ -44,7 +44,7 @@ jobs:
       - name: Verify that the formatted code hasn't been changed
         run: git diff --exit-code HEAD
   objc-lint:
-    runs-on: macOS-latest
+    runs-on: macOS-12
     name: ObjC Lint
     steps:
       - uses: actions/checkout@v3
