--- a/.github/workflows/build-ios-fabric.yml
+++ b/.github/workflows/build-ios-fabric.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   build:
     name: Build iOS FabricExample App
-    runs-on: macOS-latest
+    runs-on: macOS-12
     defaults:
       run:
         working-directory: FabricExample/ios
@@ -47,7 +47,7 @@ jobs:
         run: yarn install --frozen-lockfile --cwd ..
 
       - name: Restore buildcache
-        uses: mikehardy/buildcache-action@v1
+        uses: mikehardy/buildcache-action@v2
         continue-on-error: true
         with:
           cache_key: react-native-keyboard-controller-fabric
