--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -13,23 +13,23 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "2.7.0",
+    "react": "18.2.0",
+    "react-native": "0.71.0",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.0.0-rc.2",
+    "react-native-reanimated": "3.0.0-rc.10",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "3.17.0",
+    "react-native-screens": "3.18.2",
     "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.14.0",
     "@babel/runtime": "^7.12.5",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/react-native": "^0.70.6",
-    "metro-react-native-babel-preset": "0.72.3",
+    "metro-react-native-babel-preset": "0.73.5",
     "patch-package": "^6.4.7",
-    "typescript": "^4.8.3"
+    "react-test-renderer": "18.2.0"
   },
   "jest": {
     "preset": "react-native",
