--- a/example/package.json
+++ b/example/package.json
@@ -14,9 +14,10 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
+    "lottie-ios": "3.4.1",
     "lottie-react-native": "^5.1.4",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "18.2.0",
+    "react-native": "0.71.0",
     "react-native-gesture-handler": "2.7.0",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "^2.10.0",
@@ -26,20 +27,24 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.14.0",
     "@babel/runtime": "^7.12.5",
     "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-native": "^11.5.0",
-    "@types/react": "^18.0.21",
-    "@types/react-native": "^0.70.6",
-    "babel-jest": "^26.6.3",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^4.0.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.72.3",
-    "react-test-renderer": "18.1.0"
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.73.5",
+    "react-test-renderer": "18.2.0"
   },
   "jest": {
     "preset": "react-native",
-    "setupFiles": ["./jestSetup.js"],
+    "setupFiles": [
+      "./jestSetup.js"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
     ],
