chore: Build Android Example App -> Build Android

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-    name: Build Android Example App
+    name: Build Android
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
