--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,4 +1,4 @@
-name: 🤖 Build Android
+name: 🤖 Build Android Example
 
 on:
   push:
@@ -7,16 +7,20 @@ on:
     paths:
       - '.github/workflows/build-android.yml'
       - 'android/**'
+      - 'example/android/**'
       - 'yarn.lock'
+      - 'example/yarn.lock'
   pull_request:
     paths:
       - '.github/workflows/build-android.yml'
       - 'android/**'
+      - 'example/android/**'
       - 'yarn.lock'
+      - 'example/yarn.lock'
 
 jobs:
   build:
-    name: Build Android
+    name: Build Android Example App
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -38,8 +42,8 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - name: Install node_modules
-        run: yarn install --frozen-lockfile
+      - name: Install node_modules for example/
+        run: yarn install --frozen-lockfile --cwd example
 
       - name: Restore Gradle cache
         uses: actions/cache@v3
@@ -50,5 +54,5 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-      - name: Run Gradle Build for android/
-        run: cd android && ./gradlew assembleDebug --build-cache
+      - name: Run Gradle Build for example/android/
+        run: cd example/android && ./gradlew assembleDebug --build-cache && cd ../..
